--- a/generator/build.gradle
+++ b/generator/build.gradle
@@ -1,5 +1,3 @@
-apply plugin: 'kotlin'
-
 buildscript {
     repositories {
         mavenLocal()
@@ -11,9 +9,20 @@ buildscript {
     }
 }
 
+plugins {
+    id 'io.freefair.lombok' version '5.1.0'
+}
+
+apply plugin: 'kotlin'
+
 dependencies {
     api "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
     api "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
     api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
+
+    api "com.fasterxml.jackson.core:jackson-core:$jacksonVersion"
+    api "com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion"
+    api "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
+
     testCompile 'junit:junit:4.11'
 }
